--- a/public/main.html
+++ b/public/main.html
@@ -8,10 +8,31 @@
     <meta name="description" content="gps tracking app"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Quick Ices</title>
+    <title>Quick Ices - Site Maintenance</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <!--<div id="root"></div>-->
+    <!doctype html>
+<html>
+    <style>
+      body { text-align: center; padding: 20px; font: 20px Helvetica, sans-serif; color: #efe8e8; }
+      @media (min-width: 768px){
+        body{ padding-top: 150px; }
+      }
+      h1 { font-size: 50px; }
+      article { display: block; text-align: left; max-width: 650px; margin: 0 auto; }
+      a { color: #dc8100; text-decoration: none; }
+      a:hover { color: #efe8e8; text-decoration: none; }
+    </style>
+  </head>
+  <body bgcolor="2e2929">
+    <article>
+        <h1>We&rsquo;ll be back Shortly!</h1>
+        <div>
+            <p>Sorry for the inconvenience but we&rsquo;re performing some scheduled maintenance at the moment. If you need to you can always <a href="mailto:support@quickices.com?subject=Scheduled Maintenance">contact us</a>, or view updates on our <a href="https://status.quickices.com">status page</a>. We&rsquo;ll be back online shortly!</p>
+            <p>&mdash; Quick Ices Team</p>
+        </div>
+    </article>
   </body>
 </html>
